refactor(portfolio): 重構 TechnicalSpotlight 資料結構與 UI 組件
主要變更：
1. 資料結構規範化 (types.ts)
   - 廢除通用的 `blocks` 陣列，改採嚴格的 STAR 結構欄位 (`challenge`, `analysis`, `decision`, `result`)。
   - 強制規範資料型別，提升內容的一致性與維護性。

2. UI 組件升級
   - ListBlock: 重寫為支援語意化色系 (Red/Yellow/Green) 與圖示標題的容器，用於呈現挑戰與分析。
   - SimpleListBlock: 新增組件，用於處理傳統的純文字列表需求。
   - Decision/ResultBlock: 更新 Props 介面以適配新的強型別定義。

3. 渲染邏輯調整
   - 移除 TechnicalSpotlight 中通用的 BlockRenderer 迴圈，轉向更具針對性的內容渲染策略。

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -5,8 +5,7 @@
   "keyContributions": "Key Contributions",
   "projectShowcase": "Project Showcase",
   "codeSnippet": "Core Code",
-  "technicalSpotlight": "Technical Spotlight",
-  "technicalChallenges": "Technical Challenges & Solutions",
+  "technicalSpotlight": "Technical Challenges & Solutions",
   "employmentTime": "Employment Duration",
   "teamSize": "Team Size",
   "projectType": "Project Type",
